syntax = "proto3";

package auth;

message JwtDecode {
  string _id = 1;
  string role = 2;
  string operatorId = 3;
  string email = 4;
  string name = 5;
  string agentId = 6;
}



message Token {
  string jwt = 1;
}

service AuthService {
  rpc decode(Token) returns (JwtDecode){}
}
