// Original file: src/protos/auth.proto

export interface JwtDecode {
  _id?: string
  role?: string
  operatorId?: string
  email?: string
  name?: string
  agentId?: string
}

export interface JwtDecode__Output {
  _id: string
  role: string
  operatorId: string
  email: string
  name: string
  agentId: string
}
